chore: capture session praise
🤖 Generated with [eca](https://eca.dev)

Co-Authored-By: eca-agent <git@eca.dev>